# conduitscore

./: .gitignore  ABOUT_PAGE.md  AGENTS.md  ALEX_AUDIT_REPORT.md  ANALOGY_TRANSFERS.md  AUDIT_QUICK_REFERENCE.md  BRAINSTORM_SYNTHESIS.md  BRAINWRITING_ROUNDS.md  BUSINESS_COMPARISON_ANALYSIS.md  CLAUDE.md  COMPREHENSIVE_TESTING_SUMMARY.md  CONDUITSCORE_HUDSON_AUDIT.md  CONDUITSCORE_KRAKEN_VERDICT.md  CONDUITSCORE_LAUNCH_GUIDE.md  CONSOLIDATION_NOTES.md  ConduitScore API structure.md  ConduitScore Specs.md  ConduitScoreAdditions.md  ConduitscoreSEOAUDIT.md  FLIPS.md  FREE_TIER_GATE_SYNTHESIS.md  FinalFixes.md  HERO_AND_PERFORMANCE_TASKS.md  HomePageFixes.md  HomePageRewrites.md  IMPLEMENTATION_PLAN.md  JULES_DESIGN_HANDOFF.md  KRAKEN_VERIFICATION_REPORT.md  LogoTasks.md  MOBILE_PERFORMANCE_AUDIT.md  OPTIMIZATION_TECHNICAL_SUMMARY.md  PERFORMANCE_AUDIT_SUMMARY.txt  PERFORMANCE_FIX_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE_5_BLOG_EXPANSION_SUMMARY.md  PRODUCT_HUNT_ASSETS.md  PRODUCT_HUNT_Submissions guide.md  PROMPT_build.md  PROMPT_design_rebuild.md  PROMPT_plan.md  (+54 more)
conduit_outreach_pipeline/: .env.example  .gitignore  ARCHITECTURE.md  ETHICS_AND_COMPLIANCE.md  README.md  TEMPLATING.md  pyproject.toml
conduit_outreach_pipeline/examples/: bulk_sheet_input.csv  live_run.csv  prospects.csv  smoke_sheet_input.csv
reverse_funnel_outreach/: .env.example  .gitignore  DOMAIN_FIRST_PROSPECTING_ENGINE_SPEC.md  HKO-certificate.md  HKO-truth-audit-report.md  README.md  REVERSE_FUNNEL_OUTREACH_GUIDE.md  out_573_evidence.csv  out_573_evidence.db  pyproject.toml  tmp_574_domains.txt  tmp_smoke_domains.txt  tmp_smoke_evidence.csv  tmp_smoke_evidence.db  tmp_smoke_handoff.jsonl  tmp_smoke_legacy.csv  tmp_smoke_prospects.csv
reverse_funnel_outreach/data/: smoke_domains.txt  (+20 more)
(+589 files in other folders)
